test/errors/E003.m3
MODULE E003;

PROCEDURE foo (b : BOOLEAN) = <*ERROR 003*>
BEGIN
END foo;
BEGIN
END E003.
